# jira-test-reporting

./: .gitignore  CONTRIBUTE.md  LICENSE  README.md  pyproject.toml  requirements.txt  test_results_processor.py  test_results_to_jira.py  test_results_to_slack.py
.github/: CODEOWNERS
.github/workflows/: pypi-publish.yml
_env_configs/: third-party.conf  third_party.conf
jira_test_reporting/: test_results_processor.py  test_results_to_jira.py  test_results_to_slack.py
sample-test-reports/: pytest_report.json
tests/: test_jira_test_reporting.py
