[project]
name = "Jira Test Reporting"
version = "1.0.0"
authors = [
  { name="Saurabh Patwardhan", email="saurabhpatwardhan@outlook.com" },
]
description = "Report test results as Jira Tasks and notify over Slack - mainly for automated tests"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"